fix multiple bug